@@ -1,3 +1,3 @@
-EBUILD emacs-lexbind-23.1.9999-r1.ebuild 9496 RMD160 00f0d13d8554ebe34d01ef78f8a286dbf9dbb7c5 SHA1 3172fee60291560a469a53d14b3e631978fc8ee3 SHA256 500b749203cfcc4e88ca6c99d5ff5bfdb497e56b5ada552eb02c1d75c703ce97
-MISC ChangeLog 817 RMD160 e5091b2f2c719289b33e49b205274b6d09d4de40 SHA1 011a4a686bf202c171b950943730d70179615adf SHA256 158aa1f75e96d0cfc2904048aba73e612d29934d48b8cc36afa802485b8b4ae6
+EBUILD emacs-lexbind-23.1.9999-r1.ebuild 9823 RMD160 975ac4d23eb5048eae5a3d9698744f0b618554b5 SHA1 b090b761d7a552d2df9af87eca3d01644e730183 SHA256 ff7f8b1e5085d265024d3d666a89068c59fff6d51ee5336a92ea009e7f7b6d36
+MISC ChangeLog 928 RMD160 1d7edf1dece7f95a5bc23c49075b08ea344c0ef5 SHA1 2bc390d65619ba33f6a196c14459d9ad1300fcdb SHA256 fa603605ec88b29ed6b105d50040a877cfe5a14b6fcb38631c3df6e0ad5f2b6a
 MISC metadata.xml 1622 RMD160 01a46ab0aebc8acab07a5a874736783791b75c4e SHA1 c2869923f6e835df175a9a6f0d803170bf98fd85 SHA256 7875ea72b5aa0e9dd526c88692c08a3e1598e563d8e2d27e336fd1d5d707cb5c
