@@ -2,6 +2,10 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  19 Jan 2010; Ulrich Mueller <ulm@gentoo.org>
+  emacs-lexbind-23.1.9999-r1.ebuild:
+  Sync from portage tree.
+
   04 Jan 2010; Ulrich Mueller <ulm@gentoo.org>
   emacs-lexbind-23.1.9999-r1.ebuild:
   Sync from portage tree. Fix URL of HOMEPAGE.
